FEAT Update without validation

--- a/uu_eshop_main-server/app/config/mappings.json
+++ b/uu_eshop_main-server/app/config/mappings.json
@@ -15,6 +15,11 @@
         "realization": "api/controllers/ItemController.findItem",
         "httpMethod": "GET",
         "type": "CMD"
+      },
+      "item/update": {
+        "realization": "api/controllers/ItemController.updateItem",
+        "httpMethod": "POST",
+        "type": "CMD"
       }
     }
   }
