FEAT Remove without validation

--- a/uu_eshop_main-server/app/config/mappings.json
+++ b/uu_eshop_main-server/app/config/mappings.json
@@ -20,6 +20,11 @@
         "realization": "api/controllers/ItemController.updateItem",
         "httpMethod": "POST",
         "type": "CMD"
+      },
+      "item/remove": {
+        "realization": "api/controllers/ItemController.removeItem",
+        "httpMethod": "POST",
+        "type": "CMD"
       }
     }
   }
