FEAT Find all items without validation

--- a/uu_eshop_main-server/app/config/mappings.json
+++ b/uu_eshop_main-server/app/config/mappings.json
@@ -16,6 +16,11 @@
         "httpMethod": "GET",
         "type": "CMD"
       },
+      "item/findItems": {
+        "realization": "api/controllers/ItemController.findItems",
+        "httpMethod": "GET",
+        "type": "CMD"
+      },
       "item/update": {
         "realization": "api/controllers/ItemController.updateItem",
         "httpMethod": "POST",
